<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".Gadgets">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:justificationMode="inter_word"
                        android:text="Gadgets de monitoramento"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/borda"
                    android:backgroundTint="?attr/colorPrimary"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borda"
                        android:backgroundTint="?attr/colorOnPrimary">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/mi_band"
                            android:contentDescription="TODO" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="?attr/colorOnPrimary"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorPrimary"
                                android:text="Mi Band"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:justificationMode="inter_word"
                                android:text="@string/miBand"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/borda"
                    android:backgroundTint="?attr/colorPrimary"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borda"
                        android:backgroundTint="?attr/colorOnPrimary">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/oximetro"
                            android:contentDescription="TODO" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="?attr/colorOnPrimary"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorPrimary"
                                android:text="Oxímetro"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:justificationMode="inter_word"
                                android:text="@string/oximetro"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/borda"
                    android:backgroundTint="?attr/colorPrimary"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borda"
                        android:backgroundTint="?attr/colorOnPrimary">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/smartwatch"
                            android:contentDescription="TODO" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="?attr/colorOnPrimary"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorPrimary"
                                android:text="Smartwatch"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:justificationMode="inter_word"
                                android:text="@string/smartWatch"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/borda"
                    android:backgroundTint="?attr/colorPrimary"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borda"
                        android:backgroundTint="?attr/colorOnPrimary">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/aferidor"
                            android:contentDescription="TODO" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorPrimary"
                                android:text="Aferidor de pressão"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="?attr/colorOnPrimary"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:justificationMode="inter_word"
                                        android:text="@string/aferidor"
                                        android:textColor="?attr/colorOnSecondary"
                                        android:textSize="14sp" />
                                </LinearLayout>
                            </ScrollView>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <!-- Gadget 1 -->

        <!-- Gadget 2 -->

        <!-- Gadget 3 -->

        <!-- Gadget 4 -->

    </LinearLayout>

    <!-- Menu lateral -->
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>